--- a/index.html
+++ b/index.html
@@ -1,265 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Urgent Messages</title>
-  <link rel="manifest" href="manifest.json">
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f0f4f8;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      transition: background-color 0.3s ease;
-    }
-    .container {
-      width: 100%;
-      max-width: 480px;
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-    .debug-console {
-      width: 100%;
-      background-color: #333;
-      color: white;
-      padding: 10px;
-      margin-bottom: 20px;
-      font-family: 'Courier New', Courier, monospace;
-      font-size: 1rem;
-      border-radius: 5px;
-      max-height: 150px;
-      overflow-y: auto;
-    }
-    h1 {
-      font-size: 2rem;
-      text-align: center;
-      margin-bottom: 20px;
-      color: #007bff;
-      transition: color 0.3s ease;
-    }
-    .messages {
-      max-height: 200px;
-      overflow-y: auto;
-      margin-bottom: 20px;
-      padding-right: 10px;
-    }
-    .message {
-      padding: 12px;
-      margin-bottom: 15px;
-      border-radius: 10px;
-      background-color: #f1f1f1;
-      transition: background-color 0.3s ease;
-    }
-    .message .sender {
-      font-weight: bold;
-      color: #333;
-    }
-    .message .content {
-      margin-top: 8px;
-      color: #555;
-    }
-    .input-container {
-      display: flex;
-      flex-direction: column;
-      align-items: stretch;
-      margin-top: 20px;
-    }
-    .input-container input {
-      width: 100%;
-      padding: 12px;
-      border: 1px solid #ccc;
-      border-radius: 50px;
-      font-size: 1rem;
-      transition: all 0.3s ease;
-    }
-    .input-container button {
-      width: 100%;
-      padding: 12px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 50px;
-      cursor: pointer;
-      font-size: 1rem;
-      margin-top: 10px;
-      transition: background-color 0.3s ease;
-    }
-    .input-container input:focus {
-      border-color: #007bff;
-    }
-    .input-container button:hover {
-      background-color: #0056b3;
-    }
-    .input-container button:active {
-      background-color: #00408b;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SpinkCommunicator</title>
+    <link rel="manifest" href="/manifest.json">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        .container {
+            width: 100%;
+            max-width: 500px;
+            padding: 20px;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+        }
+        h1 {
+            text-align: center;
+            color: #1DA1F2;
+        }
+        input[type="text"], textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            background-color: #1DA1F2;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        button:hover {
+            background-color: #0d8bcf;
+        }
+        .message {
+            padding: 15px;
+            margin: 10px 0;
+            background-color: #e1e8ed;
+            border-radius: 10px;
+        }
+        .profile {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <div class="debug-console" id="debugConsole">
-      Debug Console:
-      <br>Loading...
+
+    <div id="appContainer" class="container">
+        <h1>SpinkCommunicator</h1>
+        <textarea id="messageInput" placeholder="Enter your message..." rows="3"></textarea>
+        <button onclick="sendMessage()">Send Message</button>
+
+        <div id="messagesList"></div>
     </div>
-    <h1>Urgent Messages</h1>
-    <div class="input-container">
-      <input type="text" id="messageInput" placeholder="Type your urgent message..." />
-      <button id="sendMessageBtn">Send</button>
-    </div>
-    <div class="messages" id="messages">
-      <!-- Messages will appear here -->
-    </div>
-  </div>
 
-  <!-- Firebase SDK and App Configuration -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-messaging.js"></script>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-messaging.js"></script>
 
-  <script>
-    // Debugging function to log into console
-    const logToConsole = (message) => {
-      const debugConsole = document.getElementById("debugConsole");
-      debugConsole.innerHTML += message + "<br>";
-      debugConsole.scrollTop = debugConsole.scrollHeight;  // Scroll to the bottom
-    };
+    <script>
+        // Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyDWDk_p33Y_jgPNJPHoJApEmo0W7Q9BhxA",
+            authDomain: "spinktweet.firebaseapp.com",
+            projectId: "spinktweet",
+            storageBucket: "spinktweet.appspot.com",
+            messagingSenderId: "848866063079",
+            appId: "1:848866063079:web:be2efce9b4c5ecc3956842",
+            measurementId: "G-81YMX6VBK4"
+        };
 
-    logToConsole("Starting the app...");
+        // Initialize Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+        const messaging = firebase.messaging();
 
-    // Firebase Configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyDWDk_p33Y_jgPNJPHoJApEmo0W7Q9BhxA",
-      authDomain: "spinktweet.firebaseapp.com",
-      projectId: "spinktweet",
-      storageBucket: "spinktweet.firebasestorage.app",
-      messagingSenderId: "848866063079",
-      appId: "1:848866063079:web:be2efce9b4c5ecc3956842",
-      measurementId: "G-81YMX6VBK4"
-    };
+        // Check for service worker support
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/service-worker.js')
+                .then((registration) => {
+                    console.log('Service Worker registered with scope:', registration.scope);
+                    messaging.useServiceWorker(registration);
+                }).catch((error) => {
+                    console.log('Service Worker registration failed:', error);
+                });
+        }
 
-    logToConsole("Initializing Firebase...");
+        // Enable notifications
+        function enableNotifications() {
+            messaging.requestPermission()
+                .then(() => messaging.getToken())
+                .then((token) => {
+                    console.log('FCM Token:', token);
+                    // Here, you can store the token in Firestore or send it to your server for push notifications
+                })
+                .catch((error) => {
+                    console.log('Notification permission denied:', error);
+                });
+        }
 
-    // Initialize Firebase
-    const app = firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore(app);
-    const messaging = firebase.messaging(app);
+        // Send a message
+        function sendMessage() {
+            const messageInput = document.getElementById('messageInput').value;
+            if (messageInput.trim()) {
+                const messageData = {
+                    user: "Anonymous", // Placeholder for the user
+                    content: messageInput,
+                    timestamp: firebase.firestore.FieldValue.serverTimestamp(),
+                };
+                db.collection('messages').add(messageData)
+                    .then(() => {
+                        document.getElementById('messageInput').value = ''; // Clear input
+                        loadMessages(); // Reload messages
+                    })
+                    .catch((error) => {
+                        console.log('Error sending message:', error);
+                    });
+            }
+        }
 
-    logToConsole("Firebase Initialized!");
+        // Load messages
+        function loadMessages() {
+            db.collection('messages').orderBy('timestamp', 'desc').get()
+                .then((snapshot) => {
+                    const messagesList = document.getElementById('messagesList');
+                    messagesList.innerHTML = ''; // Clear existing messages
+                    snapshot.forEach((doc) => {
+                        const message = doc.data();
+                        const messageElement = document.createElement('div');
+                        messageElement.classList.add('message');
+                        messageElement.innerHTML = `
+                            <div class="user">${message.user}</div>
+                            <div class="content">${message.content}</div>
+                        `;
+                        messagesList.appendChild(messageElement);
+                    });
+                })
+                .catch((error) => {
+                    console.log('Error loading messages:', error);
+                });
+        }
 
-    // Real-time message sync from Firestore
-    const messagesRef = db.collection("messages");
-
-    logToConsole("Connecting to Firestore...");
-
-    const renderMessage = (message) => {
-      const messageDiv = document.createElement("div");
-      messageDiv.className = "message";
-      messageDiv.innerHTML = `
-        <div class="sender">${message.sender}</div>
-        <div class="content">${message.message}</div>
-      `;
-      document.getElementById("messages").appendChild(messageDiv);
-      logToConsole("Rendering message: " + message.message);
-    };
-
-    const listenForMessages = () => {
-      logToConsole("Listening for real-time messages...");
-
-      messagesRef.orderBy("timestamp", "asc").onSnapshot((snapshot) => {
-        logToConsole("Snapshot received from Firestore.");
-        snapshot.docChanges().forEach((change) => {
-          logToConsole("Change type: " + change.type);
-          if (change.type === "added") {
-            renderMessage(change.doc.data());
-            logToConsole("New message added: " + change.doc.data().message);
-            // Scroll to the latest message
-            const messagesContainer = document.getElementById("messages");
-            messagesContainer.scrollTop = messagesContainer.scrollHeight;
-          }
+        // Listen for new messages and update the UI in real-time
+        db.collection('messages').orderBy('timestamp', 'desc').onSnapshot((snapshot) => {
+            loadMessages(); // Reload messages when a new message is added
         });
-      }, (error) => {
-        logToConsole("Error listening to Firestore: " + error.message);
-      });
-    };
 
-    // Send message to Firestore
-    const sendMessage = () => {
-      const messageInput = document.getElementById("messageInput");
-      const message = messageInput.value.trim();
-      logToConsole("Attempting to send message: " + message);
+        // Load messages on page load
+        loadMessages();
 
-      if (message === "") {
-        logToConsole("Message is empty. Not sending.");
-        return;  // Don't send empty messages
-      }
+        // Initialize notifications
+        enableNotifications();
+    </script>
 
-      logToConsole("Sending message to Firestore...");
-
-      // Add message to Firestore
-      messagesRef.add({
-        sender: "Oliver", // Replace with dynamic user name if needed
-        message: message,
-        timestamp: firebase.firestore.FieldValue.serverTimestamp()
-      }).then(() => {
-        logToConsole("Message sent successfully!");
-        messageInput.value = ""; // Clear input
-      }).catch((error) => {
-        logToConsole("Error sending message: " + error.message);
-      });
-    };
-
-    // Set up message sending
-    document.getElementById("sendMessageBtn").addEventListener("click", sendMessage);
-
-    // Enable FCM for notifications
-    const requestPermission = async () => {
-      try {
-        logToConsole("Requesting notification permission...");
-        const token = await messaging.getToken({
-          vapidKey: "YOUR_VAPID_KEY" // Replace with your own VAPID key
-        });
-        logToConsole("FCM Token obtained: " + token);
-      } catch (error) {
-        logToConsole("Error getting FCM token: " + error);
-      }
-    };
-
-    messaging.onMessage((payload) => {
-      logToConsole("Message received in foreground: " + payload.notification.body);
-      // Show the notification when app is in the foreground
-      new Notification("New Message", {
-        body: payload.notification.body,
-      });
-    });
-
-    // Request permission for notifications
-    requestPermission();
-
-    // Start listening for messages
-    listenForMessages();
-
-    logToConsole("App setup complete. Ready for interaction.");
-
-  </script>
-
-  <script>
-    // Service Worker Registration
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("/service-worker.js").then((registration) => {
-        logToConsole("Service Worker registered:", registration);
-      }).catch((error) => {
-        logToConsole("Service Worker registration failed:", error);
-      });
-    }
-  </script>
 </body>
 </html>
