--- a/index.html
+++ b/index.html
@@ -3,81 +3,175 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpinkCommunicator</title>
-    <link rel="manifest" href="/manifest.json">
+    <title>SpinkTweet</title>
+
+    <!-- CSS styles -->
     <style>
+        /* Basic Reset */
+        * {
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+        }
+
+        /* Body */
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
+          font-family: Arial, sans-serif;
+          background-color: #f4f4f4;
+          color: #333;
         }
-        .container {
-            width: 100%;
-            max-width: 500px;
-            padding: 20px;
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
+
+        /* Header */
+        header {
+          background-color: #1DA1F2;
+          color: white;
+          padding: 20px;
+          text-align: center;
         }
-        h1 {
-            text-align: center;
-            color: #1DA1F2;
+
+        header h1 {
+          font-size: 2em;
         }
-        input[type="text"], textarea {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 5px;
-            border: 1px solid #ddd;
+
+        nav a {
+          color: white;
+          margin: 0 15px;
+          text-decoration: none;
         }
-        button {
-            width: 100%;
-            padding: 10px;
-            border: none;
-            background-color: #1DA1F2;
-            color: white;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
+
+        nav a:hover {
+          text-decoration: underline;
         }
-        button:hover {
-            background-color: #0d8bcf;
+
+        /* Tweet Container */
+        #tweetsContainer {
+          padding: 20px;
         }
-        .message {
-            padding: 15px;
-            margin: 10px 0;
-            background-color: #e1e8ed;
-            border-radius: 10px;
+
+        .tweet {
+          background-color: white;
+          border-radius: 10px;
+          margin-bottom: 20px;
+          padding: 15px;
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-        .profile {
-            margin-top: 20px;
+
+        .tweet-header {
+          display: flex;
+          align-items: center;
+          margin-bottom: 10px;
+        }
+
+        .profile-pic {
+          border-radius: 50%;
+          width: 40px;
+          height: 40px;
+          margin-right: 10px;
+        }
+
+        .username {
+          font-weight: bold;
+        }
+
+        .tweet-content p {
+          margin-bottom: 10px;
+        }
+
+        .tweet-footer {
+          display: flex;
+          justify-content: space-between;
+        }
+
+        .tweet-footer div {
+          cursor: pointer;
+          color: #1DA1F2;
+        }
+
+        /* Profile, Login, Signup Pages */
+        #signupPage, #loginPage, #profilePage {
+          display: none;
+          padding: 20px;
+          max-width: 400px;
+          margin: 0 auto;
+          background-color: white;
+          border-radius: 10px;
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        #signupForm input, #loginForm input, #profileForm input {
+          width: 100%;
+          padding: 10px;
+          margin-bottom: 10px;
+          border-radius: 5px;
+          border: 1px solid #ccc;
+        }
+
+        #signupForm button, #loginForm button, #profileForm button {
+          padding: 10px;
+          background-color: #1DA1F2;
+          color: white;
+          border: none;
+          border-radius: 5px;
+          cursor: pointer;
+        }
+
+        #signupForm button:hover, #loginForm button:hover, #profileForm button:hover {
+          background-color: #0d8bcf;
         }
     </style>
 </head>
 <body>
 
-    <div id="appContainer" class="container">
-        <h1>SpinkCommunicator</h1>
-        <textarea id="messageInput" placeholder="Enter your message..." rows="3"></textarea>
-        <button onclick="sendMessage()">Send Message</button>
+    <header>
+        <h1>SpinkTweet</h1>
+        <nav>
+            <a href="javascript:void(0);" onclick="showHomePage()">Home</a>
+            <a href="javascript:void(0);" onclick="showProfilePage()">Profile</a>
+            <a href="javascript:void(0);" onclick="showLoginPage()">Login</a>
+        </nav>
+    </header>
 
-        <div id="messagesList"></div>
+    <!-- Tweets Section -->
+    <div id="tweetsContainer"></div>
+
+    <!-- Signup Page (signup.html) -->
+    <div id="signupPage">
+        <h2>Sign Up</h2>
+        <form id="signupForm">
+            <input type="text" id="signupUsername" placeholder="Username" required>
+            <input type="password" id="signupPassword" placeholder="Password" required>
+            <button type="submit">Sign Up</button>
+        </form>
+    </div>
+
+    <!-- Login Page (login.html) -->
+    <div id="loginPage">
+        <h2>Login</h2>
+        <form id="loginForm">
+            <input type="text" id="loginUsername" placeholder="Username" required>
+            <input type="password" id="loginPassword" placeholder="Password" required>
+            <button type="submit">Login</button>
+        </form>
+    </div>
+
+    <!-- Profile Page (profile.html) -->
+    <div id="profilePage">
+        <h2>Profile</h2>
+        <form id="profileForm">
+            <input type="text" id="profileUsername" placeholder="Username" required>
+            <input type="file" id="profilePic" accept="image/*">
+            <button type="submit">Save</button>
+        </form>
     </div>
 
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-messaging.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth.js"></script>
 
+    <!-- JavaScript -->
     <script>
-        // Firebase configuration
+        // Initialize Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyDWDk_p33Y_jgPNJPHoJApEmo0W7Q9BhxA",
             authDomain: "spinktweet.firebaseapp.com",
@@ -88,88 +182,133 @@
             measurementId: "G-81YMX6VBK4"
         };
 
-        // Initialize Firebase
         const app = firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
-        const messaging = firebase.messaging();
+        const auth = firebase.auth();
 
-        // Check for service worker support
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
-                .then((registration) => {
-                    console.log('Service Worker registered with scope:', registration.scope);
-                    messaging.useServiceWorker(registration);
-                }).catch((error) => {
-                    console.log('Service Worker registration failed:', error);
-                });
-        }
+        document.addEventListener("DOMContentLoaded", function() {
+            // Render Tweets on Home Page
+            renderTweets();
 
-        // Enable notifications
-        function enableNotifications() {
-            messaging.requestPermission()
-                .then(() => messaging.getToken())
-                .then((token) => {
-                    console.log('FCM Token:', token);
-                    // Here, you can store the token in Firestore or send it to your server for push notifications
-                })
-                .catch((error) => {
-                    console.log('Notification permission denied:', error);
-                });
-        }
+            // Handle Signup Form Submission
+            document.getElementById('signupForm').addEventListener('submit', handleSignup);
 
-        // Send a message
-        function sendMessage() {
-            const messageInput = document.getElementById('messageInput').value;
-            if (messageInput.trim()) {
-                const messageData = {
-                    user: "Anonymous", // Placeholder for the user
-                    content: messageInput,
-                    timestamp: firebase.firestore.FieldValue.serverTimestamp(),
-                };
-                db.collection('messages').add(messageData)
-                    .then(() => {
-                        document.getElementById('messageInput').value = ''; // Clear input
-                        loadMessages(); // Reload messages
-                    })
-                    .catch((error) => {
-                        console.log('Error sending message:', error);
-                    });
-            }
-        }
+            // Handle Login Form Submission
+            document.getElementById('loginForm').addEventListener('submit', handleLogin);
 
-        // Load messages
-        function loadMessages() {
-            db.collection('messages').orderBy('timestamp', 'desc').get()
-                .then((snapshot) => {
-                    const messagesList = document.getElementById('messagesList');
-                    messagesList.innerHTML = ''; // Clear existing messages
-                    snapshot.forEach((doc) => {
-                        const message = doc.data();
-                        const messageElement = document.createElement('div');
-                        messageElement.classList.add('message');
-                        messageElement.innerHTML = `
-                            <div class="user">${message.user}</div>
-                            <div class="content">${message.content}</div>
-                        `;
-                        messagesList.appendChild(messageElement);
-                    });
-                })
-                .catch((error) => {
-                    console.log('Error loading messages:', error);
-                });
-        }
-
-        // Listen for new messages and update the UI in real-time
-        db.collection('messages').orderBy('timestamp', 'desc').onSnapshot((snapshot) => {
-            loadMessages(); // Reload messages when a new message is added
+            // Handle Profile Form Submission
+            document.getElementById('profileForm').addEventListener('submit', handleProfileUpdate);
         });
 
-        // Load messages on page load
-        loadMessages();
+        // Render Tweets from Firebase
+        function renderTweets() {
+            db.collection("tweets").get().then((querySnapshot) => {
+                querySnapshot.forEach((doc) => {
+                    const tweet = doc.data();
+                    const tweetHTML = `
+                        <div class="tweet" id="tweet-${doc.id}">
+                            <div class="tweet-header">
+                                <img src="${tweet.profilePic}" alt="${tweet.username}" class="profile-pic">
+                                <span class="username">${tweet.username}</span>
+                            </div>
+                            <div class="tweet-content">
+                                <p>${tweet.content}</p>
+                            </div>
+                            <div class="tweet-footer">
+                                <div class="likes" onclick="likeTweet('${doc.id}')">Likes: ${tweet.likes || 0}</div>
+                                <div class="replies" onclick="replyToTweet('${doc.id}')">Replies: ${tweet.replies || 0}</div>
+                            </div>
+                        </div>
+                    `;
+                    document.getElementById("tweetsContainer").innerHTML += tweetHTML;
+                });
+            });
+        }
 
-        // Initialize notifications
-        enableNotifications();
+        // Like Tweet
+        function likeTweet(tweetId) {
+            const tweetRef = db.collection("tweets").doc(tweetId);
+            tweetRef.update({
+                likes: firebase.firestore.FieldValue.increment(1)
+            });
+        }
+
+        // Reply to Tweet
+        function replyToTweet(tweetId) {
+            // Handle replies here
+            alert(`Reply to tweet: ${tweetId}`);
+        }
+
+        // Show Home Page
+        function showHomePage() {
+            document.getElementById("signupPage").style.display = 'none';
+            document.getElementById("loginPage").style.display = 'none';
+            document.getElementById("profilePage").style.display = 'none';
+            document.getElementById("tweetsContainer").style.display = 'block';
+        }
+
+        // Show Signup Page
+        function showSignupPage() {
+            document.getElementById("signupPage").style.display = 'block';
+            document.getElementById("loginPage").style.display = 'none';
+            document.getElementById("profilePage").style.display = 'none';
+            document.getElementById("tweetsContainer").style.display = 'none';
+        }
+
+        // Show Login Page
+        function showLoginPage() {
+            document.getElementById("signupPage").style.display = 'none';
+            document.getElementById("loginPage").style.display = 'block';
+            document.getElementById("profilePage").style.display = 'none';
+            document.getElementById("tweetsContainer").style.display = 'none';
+        }
+
+        // Show Profile Page
+        function showProfilePage() {
+            document.getElementById("signupPage").style.display = 'none';
+            document.getElementById("loginPage").style.display = 'none';
+            document.getElementById("profilePage").style.display = 'block';
+            document.getElementById("tweetsContainer").style.display = 'none';
+        }
+
+        // Handle Sign Up
+        function handleSignup(event) {
+            event.preventDefault();
+            const username = document.getElementById('signupUsername').value;
+            const password = document.getElementById('signupPassword').value;
+            auth.createUserWithEmailAndPassword(username + "@example.com", password)
+                .then((userCredential) => {
+                    alert("Sign up successful!");
+                    showHomePage();
+                })
+                .catch((error) => {
+                    alert("Error: " + error.message);
+                });
+        }
+
+        // Handle Login
+        function handleLogin(event) {
+            event.preventDefault();
+            const username = document.getElementById('loginUsername').value;
+            const password = document.getElementById('loginPassword').value;
+            auth.signInWithEmailAndPassword(username + "@example.com", password)
+                .then((userCredential) => {
+                    alert("Login successful!");
+                    showHomePage();
+                })
+                .catch((error) => {
+                    alert("Error: " + error.message);
+                });
+        }
+
+        // Handle Profile Update
+        function handleProfileUpdate(event) {
+            event.preventDefault();
+            const username = document.getElementById('profileUsername').value;
+            const profilePic = document.getElementById('profilePic').files[0];
+            // You can upload the profilePic to Firebase Storage here
+            alert("Profile updated!");
+        }
     </script>
-
 </body>
 </html>
