--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       margin-top: 10px;
       font-size: 0.9em;
     }
-    .likes, .replies {
+    .likes {
       cursor: pointer;
       color: #1da1f2;
     }
@@ -130,6 +130,13 @@
 
   let isDarkMode = false;
 
+  // Check if username is saved in localStorage
+  let username = localStorage.getItem('username');
+  if (!username) {
+    username = prompt('Please enter your name:');
+    localStorage.setItem('username', username);
+  }
+
   // Toggle Dark Mode
   darkModeBtn.onclick = () => {
     isDarkMode = !isDarkMode;
@@ -143,11 +150,10 @@
     if (text) {
       db.collection("tweets").add({
         text,
-        username: "User" + Math.floor(Math.random() * 1000),  // Generate random username
+        username,
         profilePic: "https://randomuser.me/api/portraits/men/1.jpg",  // Placeholder profile pic
         time: Date.now(),
-        likes: 0,
-        replies: 0
+        likes: 0
       });
       tweetInput.value = "";
     }
@@ -168,7 +174,6 @@
           <div class="time">${new Date(tweet.time).toLocaleString()}</div>
           <div class="tweet-footer">
             <div class="likes" onclick="likeTweet('${doc.id}')">Likes: ${tweet.likes}</div>
-            <div class="replies" onclick="replyToTweet('${doc.id}')">Replies: ${tweet.replies}</div>
           </div>
         </div>
       `;
@@ -181,14 +186,6 @@
     const tweetRef = db.collection("tweets").doc(id);
     tweetRef.update({
       likes: firebase.firestore.FieldValue.increment(1)
-    });
-  }
-
-  // Reply to Tweet (basic increment for demo)
-  function replyToTweet(id) {
-    const tweetRef = db.collection("tweets").doc(id);
-    tweetRef.update({
-      replies: firebase.firestore.FieldValue.increment(1)
     });
   }
 </script>
