--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       margin-top: 10px;
       font-size: 0.9em;
     }
-    .likes, .replies {
+    .likes {
       cursor: pointer;
       color: #1da1f2;
     }
