--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       margin-top: 10px;
       font-size: 0.9em;
     }
-    .likes {
+    .likes, .replies {
       cursor: pointer;
       color: #1da1f2;
     }
@@ -155,7 +155,8 @@
         username,  // Use the saved username
         profilePic: "https://randomuser.me/api/portraits/men/1.jpg",  // Placeholder profile pic
         time: Date.now(),
-        likes: 0
+        likes: 0,
+        replies: 0
       });
       tweetInput.value = "";
     }
@@ -176,6 +177,7 @@
           <div class="time">${new Date(tweet.time).toLocaleString()}</div>
           <div class="tweet-footer">
             <div class="likes" onclick="likeTweet('${doc.id}')">Likes: ${tweet.likes}</div>
+            <div class="replies" onclick="replyToTweet('${doc.id}')">Replies: ${tweet.replies}</div>
           </div>
         </div>
       `;
@@ -188,6 +190,14 @@
     const tweetRef = db.collection("tweets").doc(id);
     tweetRef.update({
       likes: firebase.firestore.FieldValue.increment(1)
+    });
+  }
+
+  // Reply to Tweet (basic increment for demo)
+  function replyToTweet(id) {
+    const tweetRef = db.collection("tweets").doc(id);
+    tweetRef.update({
+      replies: firebase.firestore.FieldValue.increment(1)
     });
   }
 </script>
